--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "langgraph>=0.6.6",
     "radical-asyncflow",
     "pydantic>=2.0.0",
+    "dotenv>=0.9.9",
+    "langchain-openai>=0.3.33",
 ]
 [project.optional-dependencies]
 dev = [
