--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,3 +5,8 @@ repos:
       # - id: ruff # ACTIVATE THE LINTER LATER ON DEVELOPEMENT PROCESS
       #   args: [--fix]
       - id: ruff-format
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.7.5
+    hooks:
+        - id: bandit
+          args: ["-r", "-c", "pyproject.toml", "-ll"] # two level security vulnerability
