--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,17 @@ dependencies = [
     "python-dotenv",
     "academy-py",
     "pydantic>=2.0.0",
+    # ChemCrow-HPC dependencies
+    "rdkit-pypi>=2023.9.1",
+    "pandas>=2.0.0",
+    "numpy>=1.24.0",
+    "scipy>=1.11.0",
+    "scikit-learn>=1.3.0",
+    "aiohttp>=3.8.0",
+    "httpx>=0.24.0",
+    "requests>=2.31.0",
+    "pyyaml>=6.0",
+    "loguru>=0.7.0",
 ]
 
 [project.optional-dependencies]
