--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,11 +5,11 @@ repos:
       # - id: ruff # ACTIVATE THE LINTER LATER ON DEVELOPEMENT PROCESS
       #   args: [--fix]
       - id: ruff-format
-  - repo: https://github.com/PyCQA/bandit
-    rev: 1.7.5
-    hooks:
-        - id: bandit
-          args: ["-r", "-c", "pyproject.toml", "-ll"] # two level security vulnerability
+  # - repo: https://github.com/PyCQA/bandit
+  #   rev: 1.7.5
+  #   hooks:
+  #       - id: bandit
+  #         args: ["-r", "-c", "pyproject.toml", "-ll"] # two level security vulnerability
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
     hooks:
