--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langgraph>=0.6.6",
     "radical.asyncflow @ git+https://github.com/radical-cybertools/radical.asyncflow.git@main",
     "langchain-openai",
+    "langchain-ollama",
     "langchain-core",
     "langchain-community",
     "radical-asyncflow",
