--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,9 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "ruff>=0.12.11",
-    "pre-commit"
+    "pre-commit",
+    "pytest>=7.0.0",
+    "pytest-asyncio>=0.21.0"
 ]
 
 [project.scripts]
