chore: add dev dependencies for pytest and pytest-asyncio

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,3 +78,9 @@ select = [
 [tool.ruff.lint.pydocstyle]
 convention = "google"
 
+[dependency-groups]
+dev = [
+    "pytest>=8.4.2",
+    "pytest-asyncio>=1.2.0",
+]
+
