--- a/.github/workflows/linter_formatter.yml
+++ b/.github/workflows/linter_formatter.yml
@@ -7,10 +7,10 @@ jobs:
             steps:
                   - name: Fetch code
                     uses: actions/checkout@v3
-                  - name: Check formatter
-                    uses: astral-sh/ruff-action@v1
-                    with:
-                        args: "check"
+                  # - name: Check linting 
+                  #   uses: astral-sh/ruff-action@v1
+                  #   with:
+                  #       args: "check"
                   - uses: astral-sh/ruff-action@v1
                     with:
                         args: "format --check"
