--- a/.github/workflows/docs-deployment.yml
+++ b/.github/workflows/docs-deployment.yml
@@ -1,18 +1,28 @@
-name: Publish mkdocks to github pages
+name: Deploy MkDocs
 on:
-      push:
-            branches: [main]
+  push:
+    branches: [main]
+
+permissions:
+  contents: read
+  pages: write
+  id-token: write
 
 jobs:
-      publishing_docs:
-            runs-on: ubuntu-latest 
-            steps:
-                  - name: Fetch code
-                    uses: actions/checkout@v3
-                  - name: Set up python
-                    uses: actions/setup-python@v4
-                  - name: Install dependencies
-                    run:  pip install ".[dev]"
-              
-                  - name: Push the docs
-                    run: mkdocs gh-deploy --force
+  deploy:
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+      - run: pip install mkdocs-material mkdocstrings[python] pymdown-extensions mkdocs_gen_files mkdocs-literate-nav mkdocs-section-index
+      - run: mkdocs build
+      - uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./site
+      - id: deployment
+        uses: actions/deploy-pages@v4
