--- a/.github/workflows/docs-deployment.yml
+++ b/.github/workflows/docs-deployment.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           python-version: '3.x'
       - run: pip install mkdocs-material mkdocstrings[python] pymdown-extensions mkdocs_gen_files mkdocs-literate-nav mkdocs-section-index
+      - run: pip install -e .
       - run: mkdocs build
       - uses: actions/upload-pages-artifact@v3
         with:
