--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -16,6 +16,7 @@ jobs:
                         args: "format --check"
       vulnerability_analysis:
           runs-on: ubuntu-latest
+          needs: lint_and_format
           steps:
                 - name: Fetch code
                   uses: actions/checkout@v3 
@@ -23,3 +24,29 @@ jobs:
                   run: pip install bandit
                 - name: "Check with bandit"
                   run: bandit -r src/
+      tests:
+        runs-on: ubuntu-latest 
+        needs: lint_and_format
+        strategy:
+          matrix:
+            python-version: [3.8, 3.9, 3.10, 3.11]
+        steps:
+          - name: Set up python ${{ matrix.python-version }}
+            uses: actions/setup-python@v4
+            with:
+              python-version: ${{ matrix.python-version }}
+          
+          - name: Fetch code
+            uses: actions/checkout@v3 
+          
+          - name: "Install dependecies"
+            run: | 
+                pip3 install ".[tests]"            
+          - name: Run python tests with  coverage
+            run: |
+                pytest --cov=. --cov-report=html:coverage_report
+          - name: Upload results of test coverage
+            uses: actions/upload-artifact@v4
+            with:
+              path: ./coverage_html_report/index.html
+              name: codecoverage
