Added functional example. Missing some react agent interface for the routers and the synthetsizers

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,8 @@ nav:
   - Design Patterns:
       - Chatbot: design_patterns/chatbot.md
       - Sequential design pattern: design_patterns/sequential.md
+      - Supervisor design pattern: design_patterns/supervisor.md
+      - Hierarchical design pattern: design_patterns/hierachical.md
 
 
 theme:
