--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "langchain-ollama",
     "langchain-core",
     "langchain-community",
+    "langchain-mcp-adapters",
     "radical-asyncflow",
     "python-dotenv",
     "academy-py",
@@ -35,7 +36,8 @@ dev = [
     "mkdocs-literate-nav",
     "mkdocs-section-index",
     "pytest>=7.0.0",
-    "pytest-asyncio>=0.21.0"
+    "pytest-asyncio>=0.21.0",
+    "uv>=0.1.0",
 ]
 tests = [
    "pytest>=7.0.0",
