docs: memory part got updated + examples got more modular

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,8 +17,8 @@ nav:
       - Miscellaneous: features/miscellaneous.md
   - Design Patterns:
       - Chatbot: design_patterns/chatbot.md
-      - Sequential design pattern: design_patterns/sequential.md
-      - Supervisor design pattern: design_patterns/supervisor.md
+      - Sequential/Pipeline design pattern: design_patterns/sequential.md
+      - Supervisor/Router design pattern: design_patterns/supervisor.md
       - Hierarchical design pattern: design_patterns/hierachical.md
   - Phased rollout:
       - Phased rollout: phased_rollout.md
