--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -29,7 +29,7 @@ jobs:
         needs: lint_and_format
         strategy:
           matrix:
-            python-version: ['3.9', '3.10', '3.11']
+            python-version: ['3.10', '3.11']
         steps:
           - name: Fetch code
             uses: actions/checkout@v3 
