--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ nav:
       - Fault tolerance: features/fault_tolerance.md
       - Telemetry: features/telemetry.md
       - Services: features/services.md
+      - MCP: features/mcp.md
       - Miscellaneous: features/miscellaneous.md
   - Design Patterns:
       - Chatbot: design_patterns/chatbot.md
