--- a/config.yml
+++ b/config.yml
@@ -2,3 +2,5 @@ agent_execution:
   results_directory: agent_execution_results
   execution_summary_path: agent_execution_results/execution_summary.md
   graph_image_path: agent_execution_results/agent_graph.png
+logger:
+  level: DEBUG
